dnl
dnl configure.in
dnl
dnl Copyright (c) 2002 Darren Erik Vengroff.  All rights reserved.
dnl
dnl $Id$
dnl

dnl Process this file with autoconf to produce a configure script.
AC_INIT(wxSimple/app.cpp)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
AC_PATH_XTRA
dnl Replace `main' with a function in -lGL:
dnl AC_CHECK_LIB(GL, main)
AC_CHECK_LIB(Xmu, XmuMakeAtom)
AC_CHECK_LIB(gdal, GDALOpen)
dnl Replace `main' with a function in -libs:
dnl AC_CHECK_LIB(ibs, main)
AC_CHECK_LIB(m, exp)
AC_CHECK_LIB(netcdf, nc_io_px_init)
AC_CHECK_LIB(osg, NoOpBegin)
dnl Assume if we have osg we have osg*
dnl AC_CHECK_LIB(osgDB, ???)
dnl AC_CHECK_LIB(osgText, ???)
dnl AC_CHECK_LIB(osgUtil, ???)
dnl Too bad these are all mangled C++ syms.  Add some extern "C" syms for identification? 
dnl AC_CHECK_LIB(vtdata, main)
dnl AC_CHECK_LIB(vtosg, main)
dnl AC_CHECK_LIB(xmlhelper, main)
dnl AC_CHECK_LIB(wx_gtk, main)
dnl AC_CHECK_LIB(wx_gtk_gl, main)

dnl Checks for header files.
AC_PATH_X
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_CHECK_FUNCS(getcwd mktime)

AC_OUTPUT( Makedefs Makefile wxSimple/Makefile Enviro/Makefile )
